Added a route page that everyone is able to search a movie up by a title

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ ul.header li a:hover:not(.active) {
   background-color: #4caf50;
 }
 
-.flight-table {
+.movie-table {
   border-collapse: collapse;
 }
 
